// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorMessage applies theme and style props 1`] = `
<View
  accessibilityRole="alert"
  accessible={true}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "hsl(0, 75%, 95%)",
        "flexDirection": "row",
        "paddingHorizontal": 8,
        "paddingVertical": 12,
      },
      {
        "backgroundColor": "blue",
      },
    ]
  }
>
  <Image
    accessibilityRole="image"
    accessible={true}
    source={
      {
        "testUri": "../../../packages/react-native/src/assets/icons/error.png",
      }
    }
    style={
      [
        {
          "height": 20,
          "resizeMode": "contain",
          "tintColor": undefined,
          "width": 20,
        },
        [
          {
            "margin": 8,
            "tintColor": "hsl(0, 100%, 20%)",
          },
          undefined,
        ],
      ]
    }
  />
  <Text
    style={
      [
        {
          "color": "hsl(0, 100%, 20%)",
          "flex": 1,
          "fontSize": 16,
          "paddingHorizontal": 8,
        },
        {
          "color": "white",
        },
      ]
    }
  >
    Themed ErrorMessage
  </Text>
</View>
`;

exports[`ErrorMessage renders default ErrorMessage as expected 1`] = `
<View
  accessibilityRole="alert"
  accessible={true}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "hsl(0, 75%, 95%)",
        "flexDirection": "row",
        "paddingHorizontal": 8,
        "paddingVertical": 12,
      },
      undefined,
    ]
  }
>
  <Image
    accessibilityRole="image"
    accessible={true}
    source={
      {
        "testUri": "../../../packages/react-native/src/assets/icons/error.png",
      }
    }
    style={
      [
        {
          "height": 20,
          "resizeMode": "contain",
          "tintColor": undefined,
          "width": 20,
        },
        [
          {
            "margin": 8,
            "tintColor": "hsl(0, 100%, 20%)",
          },
          undefined,
        ],
      ]
    }
  />
  <Text
    style={
      [
        {
          "color": "hsl(0, 100%, 20%)",
          "flex": 1,
          "fontSize": 16,
          "paddingHorizontal": 8,
        },
        undefined,
      ]
    }
  >
    Default ErrorMessage
  </Text>
</View>
`;
